Use a text-field instead to prevent wrapping & update test(s)

--- a/app/assets/stylesheets/todos.css.sass
+++ b/app/assets/stylesheets/todos.css.sass
@@ -28,10 +28,6 @@
 			border: solid 1px #777
 			width: 100%
 			tr
-				&:first-child
-					cursor: default
-					font-style: italic
-					font-weight: bold
 				&:hover
 					background-color: #FAFAFA
 				&:not(:last-child) td
@@ -51,6 +47,10 @@
 						border: none
 						outline: none
 						width: 100%
+					#list_name
+						cursor: default
+						font-style: italic
+						font-weight: bold
 		.status
 			background-color: #EEE
 			border: solid 1px #999
